Set up create prompt page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,13 @@
 
 * {
   color: white;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  padding-bottom: 10%;
 }
 
 /* width */
