--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,7 @@ body {
   width: 100%;
   height: 100%;
   top: 0;
+  filter: saturate(0.9) brightness(1.1);
 }
 
 .gradient {
@@ -74,9 +75,9 @@ body {
   content: "";
   width: 100%;
   height: 100%;
-  filter: blur(95px);
+  filter: blur(95px) brightness(1.1);
   top: 30px;
-  opacity: 0.28;
+  opacity: 0.32;
 }
 
 @media screen and (max-width: 640px) {
@@ -112,11 +113,12 @@ body {
 }
 
 .copy_btn {
-  @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
+  @apply w-7 h-7 rounded-full bg-slate-900/10 backdrop-blur hover:bg-gray-800 flex justify-center items-center cursor-pointer hover:scale-105;
 }
 
 .glassmorphism {
-  @apply rounded-xl bg-purple-950/0 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
+  @apply p-6 backdrop-blur rounded-xl bg-black/40;
+  /* shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.1)]; */
 }
 
 .prompt_layout {
@@ -130,11 +132,13 @@ body {
 
 /* Form Component */
 .form_textarea {
-  @apply w-full flex rounded-lg h-[200px] mt-4 p-3 text-sm bg-black/20 text-gray-50 outline-0;
+  @apply w-full flex rounded-lg h-[200px] mt-6 p-3 text-sm bg-gradient-to-br border border-gray-500 bg-backg/30 text-gray-100 outline-0;
+  filter: brightness(1.6) saturate(0.4);
 }
 
 .form_input {
-  @apply w-full flex rounded-lg mt-3 p-3 text-sm bg-black/20 text-gray-50 outline-0;
+  filter: brightness(1.6) saturate(0.4);
+  @apply w-full flex rounded-lg mt-6 p-3 text-sm border-gray-500 border bg-backg/30 text-gray-100 outline-0;
 }
 
 /* Nav Component */
@@ -153,7 +157,7 @@ body {
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-black/30 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] hover:bg-slate-950 w-full h-fit;
+  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-black/30 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] hover:bg-slate-950/40 w-full h-fit;
 }
 
 .flex-center {
